--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,49 @@
+@import url("https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap");
 * {
-    font-family: sans-serif;
+  font-family: "Space Mono", monospace;
+}
+
+body {
+  margin: 1.5rem;
+}
+p {
+  font-size: 1.3rem;
+}
+h1 {
+  font-size: 1.8rem;
 }
 input,
 button {
-    font-size: 20px;
-    padding: 10px;
-    border-radius: 5px;
+  font-size: 1.1rem;
+  padding: 0.5rem;
+  border-radius: 0.2rem;
 }
 input {
-    display: block;
-    margin-bottom: 20px;
+  display: block;
+  margin-bottom: 1.3rem;
 }
 button {
-    border: 1px solid gray;
-    background: whitesmoke;
-    margin-right: 5px;
+  border: 1px solid gray;
+  background: whitesmoke;
+  margin-right: 0.3rem;
+  transition: all 300ms ease-in-out;
 }
 button:nth-last-child(2),
 button:nth-last-child(1) {
-    background: tomato;
-    color: white;
+  background-color: black;
+  color: white;
+  margin-top: 0.5rem;
+  transition: all 100ms ease-in-out;
+}
+
+button:hover {
+  cursor: pointer;
+  color: white;
+  background-color: #ffe700;
+}
+
+button:nth-last-child(2):hover,
+button:nth-last-child(1):hover {
+  background-color: #ffe700;
+  color: black;
 }
